--- a/.github/workflows/publish-00-docs-to-github-pages-setup.yml
+++ b/.github/workflows/publish-00-docs-to-github-pages-setup.yml
@@ -44,6 +44,18 @@ jobs:
           gh repo edit ${NEW_REPO} --homepage ${HOMEPAGE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
+      - name: "Enable GitHub pages on -docs repo"
+        working-directory: .
+        continue-on-error: true
+        run: |
+          SUFFIX="-docs"
+          OWNER=${{ github.repository_owner }}
+          REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
+          HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
+          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
+          curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d '{"source":{"branch":"main","path":"/docs"}}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}    
       - name: "Create -docs-qa repo"
         working-directory: .
         continue-on-error: true
@@ -61,12 +73,11 @@ jobs:
           gh repo create ${NEW_REPO} --public --description "${DESC}" --template ${TEMPLATE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
-      - name: "Set homepage in -docs-qa repo"
+      - name: "Set homepage in -docs repo"
         working-directory: .
         continue-on-error: true
         run: |
           SUFFIX="-docs-qa"
-          OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
@@ -76,4 +87,7 @@ jobs:
           gh repo edit ${NEW_REPO} --homepage ${HOMEPAGE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
+
+
+
    
