--- a/.github/workflows/publish-00-docs-to-github-pages-setup.yml
+++ b/.github/workflows/publish-00-docs-to-github-pages-setup.yml
@@ -1,9 +1,7 @@
 
 name: Publish 00 docs create repos
 on: 
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -87,6 +85,18 @@ jobs:
           gh repo edit ${NEW_REPO} --homepage ${HOMEPAGE}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
+      - name: "Enable GitHub pages on -docs-qa repo"
+        working-directory: .
+        continue-on-error: true
+        run: |
+          SUFFIX="-docs-qa"
+          OWNER=${{ github.repository_owner }}
+          REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
+          HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
+          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
+          curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d '{"source":{"branch":"main","path":"/docs"}}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}    
 
 
 
