--- a/.github/workflows/publish-00-docs-to-github-pages-setup.yml
+++ b/.github/workflows/publish-00-docs-to-github-pages-setup.yml
@@ -11,13 +11,13 @@ jobs:
         continue-on-error: true
         run: |
           SUFFIX="-docs"
-          DESC="Documentation for ${OWNER_PLUS_REPOSITORY}"
           TEMPLATE="https://github.com/ucsb-cs156-w22/TEMPLATE-docs"
           OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
-          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}        
+          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}  
+          DESC="Documentation for ${OWNER_PLUS_REPOSITORY}"      
           echo "If you get the error: "
           echo "      To authenticate, please run \'gh auth login\'"
           echo "Then: you need to set the actions secret \`DOCS_TOKEN\` to a personal access token"
@@ -33,6 +33,7 @@ jobs:
         continue-on-error: true
         run: |
           SUFFIX="-docs"
+          OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
@@ -47,6 +48,7 @@ jobs:
         continue-on-error: true
         run: |
           SUFFIX="-docs"
+          OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
@@ -59,13 +61,13 @@ jobs:
         continue-on-error: true
         run: |
           SUFFIX="-docs-qa"
-          DESC="Documentation QA site for ${OWNER_PLUS_REPOSITORY}"
           TEMPLATE="https://github.com/ucsb-cs156-w22/TEMPLATE-docs"
           OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
-          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}        
+          NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}  
+          DESC="Documentation QA site for ${OWNER_PLUS_REPOSITORY}"
           echo "About to run command:"
           echo " gh repo create ${NEW_REPO} --public --description \"${DESC}\" --template ${TEMPLATE} "
           gh repo create ${NEW_REPO} --public --description "${DESC}" --template ${TEMPLATE}
@@ -76,6 +78,7 @@ jobs:
         continue-on-error: true
         run: |
           SUFFIX="-docs-qa"
+          OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
@@ -90,6 +93,7 @@ jobs:
         continue-on-error: true
         run: |
           SUFFIX="-docs-qa"
+          OWNER_PLUS_REPOSITORY=${{github.repository}}
           OWNER=${{ github.repository_owner }}
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
