pc - try fixing github pages step

--- a/.github/workflows/00-setup-docs-to-github-pages-setup.yml
+++ b/.github/workflows/00-setup-docs-to-github-pages-setup.yml
@@ -53,7 +53,9 @@ jobs:
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
           NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
-          curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d '{"source":{"branch":"main","path":"/docs"}}'
+          GITHUB_PAGES_JSON='{"source":{"branch":"main","path":"/docs"}}'
+          echo "curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d ${GITHUB_PAGES_JSON}"
+          curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d ${GITHUB_PAGES_JSON}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}    
       - name: "Create -docs-qa repo"
@@ -98,7 +100,9 @@ jobs:
           REPOSITORY=${OWNER_PLUS_REPOSITORY/$OWNER\//}
           HOMEPAGE="https://${OWNER}.github.io/${REPOSITORY}${SUFFIX}"
           NEW_REPO=${OWNER_PLUS_REPOSITORY}${SUFFIX}
-          curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d '{"source":{"branch":"main","path":"/docs"}}'
+          GITHUB_PAGES_JSON='{"source":{"branch":"main","path":"/docs"}}'
+          echo "curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d ${GITHUB_PAGES_JSON}"
+          curl -X POST -H 'Accept: application/vnd.github.v3+json' -H 'authorization: ${{secrets.DOCS_TOKEN}}'  https://api.github.com/repos/${OWNER_PLUS_REPOSITORY}${SUFFIX}/pages -d ${GITHUB_PAGES_JSON}
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}    
 
